<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textColor="#EEE8AA"/>
    <EditText 
        android:id="@+id/edittext1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt1"
        android:textColor="#FFA500"
        android:textStyle="italic"/>
    <EditText 
        android:id="@+id/edittext2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt2"
        android:numeric="integer"
        android:textColor="#FFA500"
        android:textStyle="italic"/>
    <Button 
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbt"
        android:textColor="#FFFFF0"
        android:textStyle="italic"/>
    

</LinearLayout>