<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        
        android:text="@string/second"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textColor="#FFFACD"
        android:textStyle="bold"/>
    <Button 
        android:id="@+id/newgame_id"
        android:layout_marginTop="120dp" 
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newtxt"
        android:gravity="center"
        android:textColor="#FF00FF"
        android:textStyle="bold"/>
    <Button 
        android:id="@+id/continue_id"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/cnt"
        android:layout_marginLeft="100dp"
        android:layout_below="@id/newgame_id"
        android:gravity="center"
        android:textColor="#FF00FF"
        android:textStyle="bold"/>
    <Button 
        android:id="@+id/help_id"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_marginLeft="100dp"
        android:layout_below="@id/continue_id"
        android:gravity="center"
        android:textColor="#FF00FF"
        android:textStyle="bold"/>
    <Button 
        android:id="@+id/exit_id"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_marginLeft="100dp"
        android:layout_below="@id/help_id"
        android:gravity="center"
        android:textColor="#FF00FF"
        android:textStyle="bold"/>
    

</RelativeLayout>